--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,7 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<ScrollView
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    android:layout_width="match_parent" android:layout_height="match_parent">
+    xmlns:android="http://schemas.android.com/apk/res/android" />
+<LinearLayout
     android:layout_width="match_parent"
     android:orientation="vertical"
     android:layout_height="match_parent"
@@ -17,36 +21,114 @@
         android:textSize="20sp"
         android:text="LL SDK [VERSION]" />
 
+    <androidx.cardview.widget.CardView
+        android:id="@+id/clientLayout"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center"
+        android:layout_margin="50dp"
+        app:cardCornerRadius="2dp"
+        app:contentPadding="10dp"
+        app:layout_constraintTop_toTopOf="@+id/programLayout">
 
-<!--    <androidx.cardview.widget.CardView-->
-<!--        android:id="@+id/programLayout"-->
-<!--        android:layout_width="match_parent"-->
-<!--        android:layout_height="wrap_content"-->
-<!--        android:layout_gravity="center"-->
-<!--        android:layout_margin="50dp"-->
-<!--        app:cardCornerRadius="2dp"-->
-<!--        app:contentPadding="10dp"-->
-<!--        app:layout_constraintTop_toTopOf="@+id/stat_1">-->
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:orientation="vertical"
+        >
 
-
-<!--        <com.google.android.material.textfield.TextInputLayout-->
-<!--            android:id="@+id/outlinedTextField"-->
-<!--            android:layout_width="match_parent"-->
-<!--            android:layout_height="wrap_content"-->
-<!--            android:hint="Enter Program id"-->
-<!--            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">-->
-
-<!--            <com.google.android.material.textfield.TextInputEditText-->
-<!--                android:id="@id/inputTextField"-->
-<!--                android:layout_width="match_parent"-->
-<!--                android:layout_height="wrap_content"-->
-<!--                />-->
-
-<!--        </com.google.android.material.textfield.TextInputLayout>-->
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="Step 1"
+            />
 
 
+        <EditText
+            android:id="@+id/clientTextFiled"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:textIsSelectable="true"
+            android:hint="Enter Client id"
+            >
 
-<!--    </androidx.cardview.widget.CardView>-->
+        </EditText>
+        <Button
+            android:id="@+id/saveClientButton"
+            android:layout_width="wrap_content"
+            android:layout_gravity="center_horizontal"
+            android:text="Save Client id "
+            android:layout_height="wrap_content">
+
+        </Button>
+    </LinearLayout>
+    </androidx.cardview.widget.CardView>
+
+
+
+
+
+    <androidx.cardview.widget.CardView
+        android:id="@+id/programLayout"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center"
+        android:layout_marginBottom="20dp"
+        android:layout_marginRight="50dp"
+        android:layout_marginLeft="50dp"
+        android:layout_marginTop="10dp"
+        app:cardCornerRadius="2dp"
+        app:contentPadding="10dp"
+        app:layout_constraintTop_toTopOf="@+id/chatLayout">
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:orientation="vertical"
+            >
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="Step 2"
+                />
+
+
+        <EditText
+            android:id="@+id/outlinedTextField"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:hint="Enter Program id"
+           >
+
+        </EditText>
+        <Button
+            android:id="@+id/saveProgramButton"
+            android:layout_width="wrap_content"
+            android:layout_gravity="center_horizontal"
+            android:textIsSelectable="true"
+            android:text="Save program id "
+            android:layout_height="wrap_content">
+
+        </Button>
+
+        </LinearLayout>
+
+
+
+
+
+
+
+
+    </androidx.cardview.widget.CardView>
+    <TextView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="50dp"
+        android:textSize="15sp"
+        android:textStyle="bold"
+        android:layout_marginEnd="50dp"
+        android:text="Kindly click on Chat or widget after entering client id and program id."/>
 
     <androidx.cardview.widget.CardView
         android:id="@+id/chatLayout"
@@ -72,6 +154,8 @@
             android:textSize="22sp" />
 
     </androidx.cardview.widget.CardView>
+
+
 
 
 
@@ -132,3 +216,4 @@
     <!--        app:layout_constraintEnd_toEndOf="parent"/>-->
 
 </LinearLayout>
+</ScrollView>
