--- a/app/src/main/res/layout-land/activity_chat.xml
+++ b/app/src/main/res/layout-land/activity_chat.xml
@@ -4,14 +4,13 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/colorPrimaryDark"
     tools:context=".WidgetActivity">
 
     <com.livelike.engagementsdk.chat.ChatView
         android:id="@+id/chat_view"
         android:layout_width="0dp"
         android:layout_height="0dp"
-        android:theme="@style/AppTheme"
+        android:theme="@style/CustomChatTheme"
         app:displayUserProfile="true"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
