--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -10,7 +10,7 @@
         </item><!-- To display the gamification display in chatView -->
         <item name="chatBubbleBackground">#FFF
         </item><!-- to update the background of chat bubble,it can be drawable/color -->
-        <item name="chatBackground">#FFF
+        <item name="chatBackground">#000
         </item><!-- update the background of chat message box,it can be drawable/color -->
         <item name="usernameColor">#000</item><!-- update the color of username in chat message -->
         <item name="otherUsernameColor">#000
@@ -42,9 +42,9 @@
         <item name="stickerIconTintColor">#1675E7</item>
         <item name="otherUsernameColor">#000</item>
         <item name="messageColor">#5f5f5f</item>
-        <item name="chatInputViewBackground">#FFF</item>
-        <item name="chatDisplayBackground">#fff</item>
-        <item name="chatViewBackground">#FFF</item>
+        <item name="chatInputViewBackground">#000</item>
+        <item name="chatDisplayBackground">#000</item>
+        <item name="chatViewBackground">#000</item>
         <item name="chatInputTextColor">#8e8e93</item>
         <item name="chatInputTextSize">15sp</item>
         <item name="chatInputTextHintColor">#8e8e93</item>
