--- a/app/src/main/res/layout/custom_quiz_widget.xml
+++ b/app/src/main/res/layout/custom_quiz_widget.xml
@@ -39,7 +39,7 @@
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/quiz_rv"
         android:layout_width="match_parent"
-        android:layout_height="100dp"
+        android:layout_height="wrap_content"
         android:layout_marginStart="16dp"
         android:layout_marginTop="12dp"
         android:layout_marginEnd="16dp"
