--- a/app/src/main/res/layout/image_quiz_list_item.xml
+++ b/app/src/main/res/layout/image_quiz_list_item.xml
@@ -4,10 +4,8 @@
     android:layout_height="60dp"
     xmlns:tools="http://schemas.android.com/tools"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:background="@drawable/image_option_background_stroke_drawable"
-    >
-
-
+    android:layout_marginBottom="8dp"
+    android:background="@drawable/image_option_background_stroke_drawable"    >
 
     <ImageView
         android:id="@+id/option_iv"
@@ -22,7 +20,7 @@
         android:layout_height="4dp"
         app:layout_constraintBottom_toBottomOf="parent"
         android:visibility="gone"
-        tools:background="@color/colorPrimaryDark"/>
+        tools:background="@color/quiz_default_result_bar_color"/>
 
     <TextView
         android:id="@+id/result_tv"
