--- a/app/src/main/res/layout/image_quiz_list_item.xml
+++ b/app/src/main/res/layout/image_quiz_list_item.xml
@@ -12,6 +12,7 @@
         android:layout_width="60dp"
         android:layout_height="60dp"
         app:layout_constraintEnd_toEndOf="parent"
+        android:scaleType="fitXY"
         tools:src="@mipmap/ic_launcher" />
 
     <View
@@ -20,6 +21,7 @@
         android:layout_height="4dp"
         app:layout_constraintBottom_toBottomOf="parent"
         android:visibility="gone"
+        tools:visibility="visible"
         tools:background="@color/quiz_default_result_bar_color"/>
 
     <TextView
@@ -29,10 +31,11 @@
         android:layout_marginStart="10dp"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintBottom_toTopOf="@id/result_bar"
-        android:layout_marginBottom="5dp"
         android:textStyle="bold"
         android:textSize="16sp"
         android:visibility="gone"
+        tools:visibility="visible"
+        android:textColor="@android:color/black"
         tools:text="31 %" />
 
     <TextView
@@ -43,6 +46,7 @@
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintBottom_toTopOf="@id/result_tv"
+        android:textColor="@android:color/black"
         android:textSize="14sp"
         tools:text="K. Looney" />
 
