--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -4,11 +4,10 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
-    xmlns:android="http://schemas.android.com/apk/res/android" />
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_height="wrap_content"
         android:orientation="vertical"
         tools:context=".MainActivity">
 
@@ -121,11 +120,10 @@
 
         <androidx.cardview.widget.CardView
             android:id="@+id/chatLayout"
-
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
-            android:layout_margin="50dp"
+            android:layout_margin="20dp"
             app:cardCornerRadius="2dp"
             app:contentPadding="10dp"
             app:layout_constraintEnd_toStartOf="@+id/divider_1"
@@ -150,7 +148,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
-            android:layout_margin="50dp"
+            android:layout_margin="20dp"
             app:cardCornerRadius="2dp"
             app:contentPadding="10dp"
             app:layout_constraintEnd_toStartOf="@+id/divider_1"
