--- a/app/src/main/res/layout/custom_quiz_widget.xml
+++ b/app/src/main/res/layout/custom_quiz_widget.xml
@@ -11,8 +11,8 @@
     <com.livelike.engagementsdksample.customwidgets.TimeBar
         android:id="@+id/time_bar"
         android:layout_width="match_parent"
-        android:layout_height="5dp"
-        android:background="#FFC500" />
+        android:layout_height="@dimen/widget_time_bar_height"
+        android:background="@color/widget_time_bar_color" />
 
 
     <TextView
@@ -21,7 +21,7 @@
         android:text="IMAGE QUIZ"
         android:layout_marginTop="21dp"
         android:layout_gravity="center"
-        android:textSize="11sp"/>
+        android:textSize="@dimen/widget_type_label_size"/>
 
 
     <TextView
@@ -33,7 +33,7 @@
         android:layout_marginTop="5dp"
         android:layout_gravity="center"
         android:textColor="#000000"
-        android:textSize="15sp"/>
+        android:textSize="@dimen/widget_title_size"/>
 
 
     <androidx.recyclerview.widget.RecyclerView
@@ -45,7 +45,7 @@
         android:layout_marginEnd="16dp"
         tools:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
         tools:spanCount="2"
-        tools:listitem="@layout/image_quiz_list_item"/>
+        tools:listitem="@layout/image_option_list_item"/>
 
 
 </LinearLayout>
