--- a/app/src/main/res/layout/custom_prediction_widget.xml
+++ b/app/src/main/res/layout/custom_prediction_widget.xml
@@ -1,52 +1,68 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    xmlns:tools="http://schemas.android.com/tools"
+<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:orientation="vertical"
-    android:background="@android:color/white">
+    xmlns:tools="http://schemas.android.com/tools"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent">
 
-
-    <com.livelike.engagementsdksample.customwidgets.TimeBar
-        android:id="@+id/time_bar"
+    <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="@dimen/widget_time_bar_height"
-        android:background="@color/widget_time_bar_color" />
+        android:layout_height="match_parent"
+        android:background="@android:color/white"
+        android:orientation="vertical">
+
+        <com.livelike.engagementsdksample.customwidgets.TimeBar
+            android:id="@+id/time_bar"
+            android:layout_width="match_parent"
+            android:layout_height="@dimen/widget_time_bar_height"
+            android:background="@color/widget_time_bar_color" />
 
 
-    <TextView
-        android:id="@+id/widget_type_label"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Prediction"
-        android:layout_marginTop="21dp"
-        android:layout_gravity="center"
-        android:textSize="@dimen/widget_type_label_size"/>
+        <TextView
+            android:id="@+id/widget_type_label"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:layout_marginTop="21dp"
+            android:text="Prediction"
+            android:textSize="@dimen/widget_type_label_size" />
 
 
-    <TextView
-        android:id="@+id/widget_title"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        tools:text="Who was graduated from UCLA?"
-        android:textStyle="bold"
-        android:layout_marginTop="5dp"
-        android:layout_gravity="center"
-        android:textColor="#000000"
-        android:textSize="@dimen/widget_title_size"/>
+        <TextView
+            android:id="@+id/widget_title"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:layout_marginTop="5dp"
+            android:textColor="#000000"
+            android:textSize="@dimen/widget_title_size"
+            android:textStyle="bold"
+            tools:text="Who was graduated from UCLA?" />
 
 
-    <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/widget_rv"
+        <androidx.recyclerview.widget.RecyclerView
+            android:id="@+id/widget_rv"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="16dp"
+            android:layout_marginTop="12dp"
+            android:layout_marginEnd="16dp"
+            tools:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
+            tools:listitem="@layout/image_option_list_item"
+            tools:spanCount="2" />
+
+    </LinearLayout>
+
+    <com.airbnb.lottie.LottieAnimationView
+        android:id="@+id/followupAnimation"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="16dp"
-        android:layout_marginTop="12dp"
-        android:layout_marginEnd="16dp"
-        tools:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
-        tools:spanCount="2"
-        tools:listitem="@layout/image_option_list_item"/>
+        android:layout_height="0dp"
+        android:adjustViewBounds="false"
+        android:cropToPadding="false"
+        android:padding="0dp"
+        android:scaleType="fitCenter"
+        android:visibility="gone"
+        android:layout_gravity="bottom"
+        tools:visibility="invisible" />
 
-
-</LinearLayout>
+</FrameLayout>
