--- a/app/src/main/res/layout/image_option_list_item.xml
+++ b/app/src/main/res/layout/image_option_list_item.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="160dp"
-    android:layout_height="60dp"
+    android:layout_height="62dp"
     xmlns:tools="http://schemas.android.com/tools"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_marginBottom="8dp"
@@ -10,10 +10,13 @@
     <ImageView
         android:id="@+id/option_iv"
         android:layout_width="60dp"
-        android:layout_height="60dp"
+        android:layout_height="0dp"
         app:layout_constraintEnd_toEndOf="parent"
         android:scaleType="fitXY"
-        tools:src="@mipmap/ic_launcher" />
+        android:layout_margin="1dp"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintBottom_toBottomOf="parent"
+        tools:src="@drawable/ic_option" />
 
     <View
         android:id="@+id/result_bar"
