poll image list item ui fixes

--- a/app/src/main/res/layout/poll_image_list_item.xml
+++ b/app/src/main/res/layout/poll_image_list_item.xml
@@ -17,6 +17,7 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="parent"
+        android:layout_margin="1dp"
         tools:srcCompat="@tools:sample/avatars" />
 
     <TextView
