--- a/app/src/main/res/drawable/image_option_background_stroke_drawable.xml
+++ b/app/src/main/res/drawable/image_option_background_stroke_drawable.xml
@@ -2,7 +2,7 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="rectangle">
 
-    <corners android:radius="4dp" />
+    <corners android:radius="@dimen/rounded_corner_box_radius" />
 
     <stroke
         android:width="1dp"
