--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -124,6 +124,7 @@
             android:layout_height="wrap_content"
             android:layout_gravity="center"
             android:layout_margin="20dp"
+            android:visibility="gone"
             app:cardCornerRadius="2dp"
             app:contentPadding="10dp"
             app:layout_constraintEnd_toStartOf="@+id/divider_1"
@@ -149,6 +150,7 @@
             android:layout_height="wrap_content"
             android:layout_gravity="center"
             android:layout_margin="20dp"
+            android:visibility="gone"
             app:cardCornerRadius="2dp"
             app:contentPadding="10dp"
             app:layout_constraintEnd_toStartOf="@+id/divider_1"
