--- a/app/src/main/res/layout/poll_image_list_item.xml
+++ b/app/src/main/res/layout/poll_image_list_item.xml
@@ -14,6 +14,7 @@
         android:layout_width="70dp"
         android:layout_height="0dp"
         android:scaleType="fitXY"
+        android:layout_margin="2dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="parent"
