--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -3,4 +3,5 @@
     <dimen name="widget_time_bar_height">5dp</dimen>
     <dimen name="widget_type_label_size">11sp</dimen>
     <dimen name="widget_title_size">15sp</dimen>
+    <dimen name="rounded_corner_box_radius">4dp</dimen>
 </resources>
