Custom Prize alert configured in alert view

--- a/app/src/main/res/layout/custom_sponser_alert.xml
+++ b/app/src/main/res/layout/custom_sponser_alert.xml
@@ -75,10 +75,13 @@
             android:visibility="gone" />
 
         <LinearLayout
+            android:id="@+id/sponsor_container"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:gravity="center"
             android:orientation="horizontal"
+            android:visibility="gone"
+            tools:visibility="visible"
             android:padding="5dp">
 
             <TextView
