--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -4,9 +4,10 @@
     <color name="colorPrimaryDark">#3700B3</color>
     <color name="colorAccent">#03DAC5</color>
     <color name="livelike_default_text_color" tools:ignore="PrivateResource">#FFFFFF</color>
-    <color name="quiz_incorrect_result_bar_color">#FF3C3C</color>
-    <color name="quiz_correct_result_bar_color">#00FF78</color>
-    <color name="quiz_default_result_bar_color">#E6E6E6</color>
+    <color name="incorrect_result_bar_color">#FF3C3C</color>
+    <color name="correct_result_bar_color">#00FF78</color>
+    <color name="default_result_bar_color">#E6E6E6</color>
+    <color name="selected_result_bar_color">#2196F3</color>
     <color name="image_slider_widget_result_center_color">#0650C3</color>
     <color name="image_slider_widget_result_end_color">#0650C3</color>
     <color name="image_slider_gradient_start">#140099</color>
