--- a/app/src/main/res/layout/custom_prediction_widget.xml
+++ b/app/src/main/res/layout/custom_prediction_widget.xml
@@ -44,9 +44,8 @@
             android:id="@+id/widget_rv"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginStart="16dp"
+            android:paddingLeft="16dp"
             android:layout_marginTop="12dp"
-            android:layout_marginEnd="16dp"
             tools:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
             tools:listitem="@layout/image_option_list_item"
             tools:spanCount="2" />
