--- a/app/src/main/res/layout/image_option_list_item.xml
+++ b/app/src/main/res/layout/image_option_list_item.xml
@@ -1,10 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="160dp"
+    android:layout_width="match_parent"
     android:layout_height="62dp"
     xmlns:tools="http://schemas.android.com/tools"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_marginBottom="8dp"
+    android:layout_marginRight="16dp"
     android:background="@drawable/image_option_background_stroke_drawable">
 
     <ImageView
