--- a/app/src/main/res/layout/image_option_list_item.xml
+++ b/app/src/main/res/layout/image_option_list_item.xml
@@ -44,15 +44,18 @@
 
     <TextView
         android:id="@+id/option_tv"
-        android:layout_width="wrap_content"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginStart="10dp"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintBottom_toTopOf="@id/result_tv"
+        app:layout_constraintRight_toLeftOf="@id/option_iv"
         android:textColor="@android:color/black"
+        android:maxLines="1"
+        android:ellipsize="end"
         android:textSize="14sp"
-        tools:text="K. Looney" />
+        tools:text="K. Looney  K. Looney  " />
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
