--- a/app/src/main/res/layout/poll_image_list_item.xml
+++ b/app/src/main/res/layout/poll_image_list_item.xml
@@ -22,7 +22,7 @@
 
     <TextView
         android:id="@+id/textView"
-        android:layout_width="wrap_content"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_margin="5dp"
         android:layout_marginStart="2dp"
@@ -33,7 +33,11 @@
         app:layout_constraintHorizontal_bias="0.04"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        tools:text="Smith" />
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toLeftOf="@id/imageView"
+        android:maxLines="1"
+        android:ellipsize="end"
+        tools:text="Smith  K. Looney   " />
 
     <ProgressBar
         android:id="@+id/progressBar"
