--- a/app/src/main/res/layout/custom_cheer_meter.xml
+++ b/app/src/main/res/layout/custom_cheer_meter.xml
@@ -69,8 +69,10 @@
                         android:scaleType="centerInside" />
                 </FrameLayout>
 
-                <View
-                    android:layout_width="50dp"
+                <com.airbnb.lottie.LottieAnimationView
+                    android:id="@+id/vs_anim"
+                    android:layout_width="wrap_content"
+                    android:layout_margin="10dp"
                     android:layout_height="match_parent" />
 
                 <FrameLayout
