--- a/app/src/main/res/drawable/progress_drawable_cheer_team_2.xml
+++ b/app/src/main/res/drawable/progress_drawable_cheer_team_2.xml
@@ -16,9 +16,9 @@
             <shape>
                 <corners android:radius="2dp" />
                 <gradient
-                    android:centerColor="#FF0033"
-                    android:endColor="#FF3262"
-                    android:startColor="#FF324A" />
+                    android:centerColor="#ed174b"
+                    android:endColor="#ed174b"
+                    android:startColor="#ed174b" />
             </shape>
         </clip>
     </item>
