--- a/app/src/main/res/drawable/progress_drawable_cheer_team_2.xml
+++ b/app/src/main/res/drawable/progress_drawable_cheer_team_2.xml
@@ -4,9 +4,9 @@
         <shape>
             <corners android:radius="2dp" />
             <gradient
-                android:centerColor="#FFF"
-                android:endColor="#FFF"
-                android:startColor="#FFF" />
+                android:centerColor="@android:color/transparent"
+                android:endColor="@android:color/transparent"
+                android:startColor="@android:color/transparent" />
         </shape>
     </item>
     <item android:id="@android:id/progress">
