--- a/mmlengagementsdk/src/main/res/layout/mml_image_slider.xml
+++ b/mmlengagementsdk/src/main/res/layout/mml_image_slider.xml
@@ -16,7 +16,10 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_margin="16dp"
+        android:paddingLeft="16dp"
+        android:paddingTop="32dp"
+        android:paddingRight="16dp"
+        android:paddingBottom="32dp"
         android:orientation="vertical">
 
         <TextView
@@ -42,6 +45,7 @@
             android:layout_height="wrap_content"
             android:layout_marginTop="@dimen/timer_margin_top"
             android:textAllCaps="true"
+            android:letterSpacing="0.1"
             android:textColor="@color/mml_widget_title_color"
             android:textSize="10sp"
             tools:text="Jan 19,10:10 AM" />
