--- a/mmlengagementsdk/src/main/res/layout/mml_quiz_widget.xml
+++ b/mmlengagementsdk/src/main/res/layout/mml_quiz_widget.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
@@ -20,8 +19,11 @@
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_margin="16dp"
-            android:orientation="vertical">
+            android:orientation="vertical"
+            android:paddingLeft="16dp"
+            android:paddingTop="32dp"
+            android:paddingRight="16dp"
+            android:paddingBottom="32dp">
 
             <TextView
                 android:id="@+id/quiz_title"
@@ -47,6 +49,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="@dimen/timer_margin_top"
+                android:letterSpacing="0.1"
                 android:textAllCaps="true"
                 android:textColor="@color/mml_widget_title_color"
                 android:textSize="10sp"
